...
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginButton"
            style="@style/IOSPrimaryButtonStyle"
            android:text="@string/login" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signUpButton"
            style="@style/IOSSecondaryButtonStyle"
...
